--- a/src/components/usePasswordType/usePasswordType.module.css
+++ b/src/components/usePasswordType/usePasswordType.module.css
@@ -1,9 +1,8 @@
 .toggle {
+  composes: buttonIcon from '../../components/Button/Button.module.css';
   width: 2.25rem;
   height: 2.25rem;
-  border: 0;
-  padding: 0;
-  background: transparent no-repeat center center/1.25rem;
+  background-size: 1.25rem;
   position: absolute;
   right: 0.25rem;
 }
