--- a/src/components/AccountSlide/AccountSlide.module.css
+++ b/src/components/AccountSlide/AccountSlide.module.css
@@ -21,18 +21,14 @@
 
 .input {
   composes: input from '../Input/Input.module.css';
-  width: calc(230rem / 16);
-  padding-right: 2.5rem;
-}
-
-.inputLine::after {
-  content: '';
-  position: absolute;
-  right: 0.25rem;
-  width: 2.25rem;
-  height: 2.25rem;
-  background: url('../images/pencil.svg') no-repeat center;
-  opacity: 0.34;
+  width: calc(236rem / 16);
+  background-image: url('../images/pencil.svg'),
+    linear-gradient(140deg, var(--color-pink) 0%, var(--color-dark) 100%);
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position: calc(100% - 0.75rem) center, 0;
+  padding-right: 2rem;
+  margin: 1rem 0 1rem 0;
 }
 
 .circle {
