--- a/src/components/AccountSlide/AccountSlide.module.css
+++ b/src/components/AccountSlide/AccountSlide.module.css
@@ -8,6 +8,56 @@
   justify-content: center;
 }
 
+.form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.input {
+  composes: input from '../Input/Input.module.css';
+  width: calc(232rem / 16);
+  background-image: url('../images/pencil.svg'),
+    linear-gradient(140deg, var(--color-pink) 0%, var(--color-dark) 100%);
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position: calc(100% - 0.75rem) center, 0;
+  padding-right: 2.25rem;
+  margin: 1rem 0 1rem 0;
+}
+
+.circle {
+  composes: buttonIcon from '../Button/Button.module.css';
+
+  width: 2.25rem;
+  height: 2.25rem;
+  border-radius: 50%;
+  box-shadow: inset -1px 1px 1px 0 rgba(255, 255, 255, 0.1),
+    0.375rem 0.375rem 0.75rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.save {
+  composes: circle;
+
+  background-image: url('../images/checkmark.svg'),
+    linear-gradient(140deg, var(--color-dark) 0%, var(--color-pink) 100%);
+  background-size: auto;
+  margin: 0 0.375rem 0 0.375rem;
+}
+
+.cancel {
+  composes: circle;
+
+  box-shadow: none;
+  border: double 2.2px transparent;
+  background-image: url('../images/x-close.svg'),
+    linear-gradient(#363657, #363657),
+    linear-gradient(140deg, var(--color-dark) 0%, var(--color-pink) 100%);
+  background-origin: border-box;
+  background-clip: border-box, content-box, border-box;
+  background-size: auto;
+}
+
 .new {
   composes: name;
   padding: 0;
