--- a/src/components/AccountsCarousel/AccountsCarousel.module.css
+++ b/src/components/AccountsCarousel/AccountsCarousel.module.css
@@ -23,10 +23,13 @@
 }
 
 .bubbles {
-  display: inline-block;
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.item {
+  display: inline-block;
 }
 
 .bubble {
@@ -34,22 +37,24 @@
   height: 0.5rem;
   width: 0.5rem;
   background: var(--color-grey-light);
+  opacity: 0.5;
   border-radius: 50%;
-  margin: 0 0.1875rem 0 0.1875rem;
+  margin: 0 0.25rem;
 }
 
-.bubbleTransparent {
+.bubbleActive {
   composes: bubble;
-  background: rgba(200, 227, 238, 0.5);
+  opacity: 1;
 }
 
 .add {
   composes: bubble;
   composes: buttonIcon from '../Button/Button.module.css';
   background: url('../images/plus-circle.svg') no-repeat center/contain;
+  opacity: 0.35;
 }
 
-.addTransparent {
+.addActive {
   composes: add;
-  opacity: 0.35;
+  opacity: 1;
 }
