--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -4,8 +4,8 @@
 }
 
 .dropdown {
-  --gradient-end: #9b1864;
-  --gradient-start: #630e40;
+  --gradient-end: #9B1864;
+  --gradient-start: #630E40;
   --item-height: 1.25rem;
 
   /* place it covering the button with an overlap */
@@ -19,11 +19,7 @@
   --footer-height: 0.375rem;
   padding-bottom: var(--footer-height);
   background-size: var(--footer-height);
-  background-image: linear-gradient(
-    0,
-    var(--gradient-start) 0%,
-    var(--gradient-end) var(--footer-height)
-  );
+  background-image: linear-gradient(0, var(--gradient-start) 0%, var(--gradient-end) var(--footer-height));
   background-position: bottom;
   z-index: 1;
 }
@@ -34,7 +30,7 @@
   cursor: pointer;
 }
 
-.toggle[aria-expanded='true'] {
+.toggle[aria-expanded=true] {
   /* keep the toggle button visible on top of menu */
   z-index: 2;
   opacity: 0.35;
@@ -43,11 +39,7 @@
 .heading {
   composes: buttonText from '../Typography/Typography.module.css';
 
-  background: linear-gradient(
-    0,
-    var(--gradient-start) 0%,
-    var(--gradient-end) 100%
-  );
+  background: linear-gradient(0, var(--gradient-start) 0%, var(--gradient-end) 100%);
   color: var(--color-grey-light);
   margin: 0;
   padding: 0.5rem 0.75rem;
@@ -61,7 +53,7 @@
   list-style: none;
   padding-left: 0;
   margin: 0;
-  background-color: #4f405c;
+  background-color: #4F405C;
 }
 
 .listItem {
