--- a/src/components/AccountSlide/AccountSlide.module.css
+++ b/src/components/AccountSlide/AccountSlide.module.css
@@ -2,10 +2,11 @@
   composes: accountText from '../Typography/Typography.module.css';
   position: relative;
   padding-left: 2.125rem;
-  height: 3rem;
+  height: 1.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 0.375rem;
 }
 
 .form {
@@ -61,7 +62,7 @@
 .new {
   composes: name;
   padding: 0;
-  margin: 0;
+  margin-bottom: 0;
 }
 
 .import {
