--- a/src/components/AccountsCarousel/AccountsCarousel.module.css
+++ b/src/components/AccountsCarousel/AccountsCarousel.module.css
@@ -21,3 +21,40 @@
   background: url('../images/chevron-right.svg') no-repeat;
   right: 6.25rem;
 }
+
+.bubbles {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.item {
+  display: inline-block;
+}
+
+.bubble {
+  display: inline-block;
+  height: 0.5rem;
+  width: 0.5rem;
+  background: var(--color-grey-light);
+  opacity: 0.5;
+  border-radius: 50%;
+  margin: 0 0.25rem;
+}
+
+.bubbleActive {
+  composes: bubble;
+  opacity: 1;
+}
+
+.add {
+  composes: bubble;
+  composes: buttonIcon from '../Button/Button.module.css';
+  background: url('../images/plus-circle.svg') no-repeat center/contain;
+  opacity: 0.35;
+}
+
+.addActive {
+  composes: add;
+  opacity: 1;
+}
