--- a/src/views/ReceiveToken/ReceiveToken.module.css
+++ b/src/views/ReceiveToken/ReceiveToken.module.css
@@ -1,20 +1,59 @@
 .container {
-  padding-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
-.accountBox {
+.heading {
+  composes: screenHeadline from '../../components/Typography/Typography.module.css';
+  margin: 0;
+}
+
+.subline {
+  composes: subline from '../../components/Typography/Typography.module.css';
+  margin: 0.25rem 0 0.75rem 0;
+}
+
+.small {
+  composes: smallText from '../../components/Typography/Typography.module.css';
+  margin-top: 1rem;
+}
+
+.addressWrapper {
   display: block;
+  position: relative;
+  width: 100%;
+  margin: 0.25rem 0 1.5rem 0;
 }
 
 .addressBox {
-  width: 90%;
-  float: left;
-  border: 1px solid black;
-  overflow: hidden;
+  composes: input from '../../components/Input/Input.module.css';
+  font-size: 0.75rem;
+  width: calc(100% - 3.5rem);
+  padding-right: 2.5rem;
+  text-align: center;
+}
+
+.copy {
+  composes: buttonIcon from '../../components/Button/Button.module.css';
+  background-image: url('../../components/images/copy.svg');
+  background-position: center 40%;
+  background-size: auto 50%;
+  width: 2.25rem;
+  height: 2.25rem;
+  position: absolute;
+  right: 0.25rem;
+}
+
+.copied {
+  composes: copy;
+  background-image: url('../../components/images/checkmark-circle.svg');
 }
 
 .qrCodeToggle {
   composes: buttonIcon from '../../components/Button/Button.module.css';
+  display: flex;
   display: grid;
   grid-template-areas: 'code';
   width: 30%;
@@ -28,7 +67,9 @@
 .qrCodeToggle:hover .qrCodeShadow,
 .qrCodeToggle:focus .qrCodeShadow {
   grid-area: code;
-  background: rgba(0, 0, 0, 0.7) url('../../components/images/search.svg') center center/1.5rem no-repeat;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7) url('../../components/images/search.svg')
+    center center/1.5rem no-repeat;
   border: 0;
   position: relative;
   cursor: pointer;
