--- a/src/views/ReceiveToken/ReceiveToken.module.css
+++ b/src/views/ReceiveToken/ReceiveToken.module.css
@@ -20,19 +20,17 @@
   margin-top: 1rem;
 }
 
-.addressWrapper {
-  display: block;
+.addressLine {
   position: relative;
   width: 100%;
   margin: 0.25rem 0 1.5rem 0;
 }
 
-.addressBox {
+.address {
   composes: input from '../../components/Input/Input.module.css';
-  font-size: 0.75rem;
+  font-size: 0.8125rem;
   width: calc(100% - 3.5rem);
   padding-right: 2.5rem;
-  text-align: center;
 }
 
 .copy {
