--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -25,12 +25,12 @@
 }
 
 /* https://selleo.com/til/posts/xhgzlfgcql-a-way-to-make-autofilled-inputs-background-transparent */
-.input:-webkit-autofill,
-.input:-webkit-autofill:hover,
-.input:-webkit-autofill:focus,
-.input:-webkit-autofill:active {
-  transition: background-color 5000s;
-  -webkit-text-fill-color: var(--color-grey-light) !important;
+.input:-webkit-autofill {
+  transition: all 5000s;
+}
+
+.input:autofill {
+  transition: all 5000s;
 }
 
 .inputKiltAmount {
