SK-144: Solved autofill background (#211)

--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -12,6 +12,7 @@
     var(--color-pink) 0%,
     var(--color-dark) 100%
   );
+  caret-color: var(--color-grey-light);
 }
 
 .input::selection {
@@ -27,13 +28,8 @@
   composes: input;
 
   text-align: right;
-  background-image:
-    url('../images/kilt-coin.svg'),
-    linear-gradient(
-      140deg,
-      var(--color-pink) 0%,
-      var(--color-dark) 100%
-    );
+  background-image: url('../images/kilt-coin.svg'),
+    linear-gradient(140deg, var(--color-pink) 0%, var(--color-dark) 100%);
   background-size: calc(13rem / 16) 1rem, auto;
   background-repeat: no-repeat;
   background-position: calc(100% - 0.75rem) center, 0;
