user cannot select hidden words

--- a/src/views/SaveBackupPhrase/SaveBackupPhrase.module.css
+++ b/src/views/SaveBackupPhrase/SaveBackupPhrase.module.css
@@ -41,6 +41,7 @@
   composes: subline from '../../components/Typography/Typography.module.css';
   font-size: 1rem;
   filter: blur(3px);
+  user-select: none;
 }
 
 .item::marker {
