--- a/src/components/Overlay/Overlay.module.css
+++ b/src/components/Overlay/Overlay.module.css
@@ -1,15 +1,20 @@
 .overlay {
-
   border-radius: 0.75rem;
-  background: linear-gradient(135deg, #0A1B2F 0%, #304765 43.18%, #547099 69.61%, #547099 100%);
-  box-shadow: 0.375rem 0.375rem 0.75rem 0 rgba(0,0,0,0.5);
+  background: linear-gradient(
+    135deg,
+    #0a1b2f 0%,
+    #304765 40%,
+    #547099 70%,
+    #547099 100%
+  );
+  box-shadow: 0.375rem 0.375rem 0.75rem 0 rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 7rem;
   left: 6.125rem;
   right: 6.125rem;
   padding: 1.5rem;
   box-sizing: border-box;
-  display:flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
 }
