always center stats

--- a/src/components/Stats/Stats.module.css
+++ b/src/components/Stats/Stats.module.css
@@ -2,6 +2,7 @@
   composes: smallText from '../Typography/Typography.module.css';
   position: absolute;
   bottom: 0;
+  align-self: center;
 }
 
 .balance {
