--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -1,11 +1,13 @@
 .table {
   composes: subline from '../../components/Typography/Typography.module.css';
   text-align: left;
+
   --radius: 0.375rem;
   --opacity: 0.3;
 }
 
-.th, .td {
+.th,
+.td {
   padding: 0.375rem 0.5rem;
 }
 
