--- a/src/components/AccountSlide/AccountSlide.module.css
+++ b/src/components/AccountSlide/AccountSlide.module.css
@@ -18,7 +18,8 @@
 .input {
   composes: input from '../Input/Input.module.css';
   width: calc(232rem / 16);
-  background-image: url('../images/pencil.svg'),
+  background-image:
+    url('../images/pencil.svg'),
     linear-gradient(140deg, var(--color-pink) 0%, var(--color-dark) 100%);
   background-size: auto;
   background-repeat: no-repeat;
@@ -29,18 +30,18 @@
 
 .circle {
   composes: buttonIcon from '../Button/Button.module.css';
-
   width: 2.25rem;
   height: 2.25rem;
   border-radius: 50%;
-  box-shadow: inset -1px 1px 1px 0 rgba(255, 255, 255, 0.1),
+  box-shadow:
+    inset -1px 1px 1px 0 rgba(255, 255, 255, 0.1),
     0.375rem 0.375rem 0.75rem 0 rgba(0, 0, 0, 0.2);
 }
 
 .save {
   composes: circle;
-
-  background-image: url('../images/checkmark.svg'),
+  background-image:
+    url('../images/checkmark.svg'),
     linear-gradient(140deg, var(--color-dark) 0%, var(--color-pink) 100%);
   background-size: auto;
   margin: 0 0.375rem 0 0.375rem;
@@ -48,10 +49,10 @@
 
 .cancel {
   composes: circle;
-
   box-shadow: none;
   border: double 2.2px transparent;
-  background-image: url('../images/x-close.svg'),
+  background-image:
+    url('../images/x-close.svg'),
     linear-gradient(#363657, #363657),
     linear-gradient(140deg, var(--color-dark) 0%, var(--color-pink) 100%);
   background-origin: border-box;
