--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,6 +1,5 @@
 .buttonPrimary {
   composes: buttonText from '../Typography/Typography.module.css';
-
   text-decoration: none;
   display: inline-flex;
   justify-content: center;
@@ -9,18 +8,18 @@
   border: 0;
   border-radius: 1.125rem;
   padding: 0 2rem;
-  background: linear-gradient(
-    140deg,
-    var(--color-dark) 0%,
-    var(--color-pink) 100%
-  );
+  background:
+    linear-gradient(
+      140deg,
+      var(--color-dark) 0%,
+      var(--color-pink) 100%
+    );
   box-shadow: 0.375rem 0.375rem 0.75rem 0 rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
 
 .buttonSecondary {
   composes: buttonText from '../Typography/Typography.module.css';
-
   height: 2.25rem;
   border: 0;
   padding: 0 2rem;
