--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -4,22 +4,22 @@
 }
 
 .dropdown {
-  --gradient-end: #9B1864;
-  --gradient-start: #630E40;
+  --gradient-start: #9b1864;
+  --gradient-end: #630e40;
   --item-height: 1.25rem;
 
   /* place it covering the button with an overlap */
   position: absolute;
   top: -0.375rem;
   right: -0.375rem;
-
   width: calc(180rem / 16);
 
   /* following generates the menu footer */
   --footer-height: 0.375rem;
+
   padding-bottom: var(--footer-height);
   background-size: var(--footer-height);
-  background-image: linear-gradient(0, var(--gradient-start) 0%, var(--gradient-end) var(--footer-height));
+  background-image: linear-gradient(var(--gradient-start) 0%, var(--gradient-end) var(--footer-height));
   background-position: bottom;
   z-index: 1;
 }
@@ -38,8 +38,7 @@
 
 .heading {
   composes: buttonText from '../Typography/Typography.module.css';
-
-  background: linear-gradient(0, var(--gradient-start) 0%, var(--gradient-end) 100%);
+  background: linear-gradient(var(--gradient-start) 0%, var(--gradient-end) 100%);
   color: var(--color-grey-light);
   margin: 0;
   padding: 0.5rem 0.75rem;
@@ -53,13 +52,12 @@
   list-style: none;
   padding-left: 0;
   margin: 0;
-  background-color: #4F405C;
+  background-color: #4f405c;
 }
 
 .listItem {
   composes: subline from '../Typography/Typography.module.css';
   font-size: calc(11rem / 16);
-
   display: grid;
   margin: 0;
   padding: 0;
