--- a/src/views/App/App.css
+++ b/src/views/App/App.css
@@ -3,16 +3,15 @@
 @import '~dialog-polyfill/dist/dialog-polyfill.css';
 
 :root {
-  --color-pink: #8C145A;
-  --color-orange: #EF5A28;
-  --color-dark: #4F405C;
-  --color-green: #5AB9AA;
-  --color-light: #C8E3EE;
-  --color-grey-light: #F2EFEE;
-  --color-grey-medium: #A8A8A8;
+  --color-pink: #8c145a;
+  --color-orange: #ef5a28;
+  --color-dark: #4f405c;
+  --color-green: #5ab9aa;
+  --color-light: #c8e3ee;
+  --color-grey-light: #f2efee;
+  --color-grey-medium: #a8a8a8;
   --color-black: black;
   --color-white: white;
-
   --popup-width: 480px;
   --popup-height: 600px;
 
