--- a/src/views/CreatePassword/CreatePassword.module.css
+++ b/src/views/CreatePassword/CreatePassword.module.css
@@ -74,7 +74,7 @@
 .complexity::before {
   grid-area: self;
   content: '';
-  clip-path: path('M0,50.2C0,22.5,22.4,0,50,0s50,22.5,50,50.2c0,24.9-18.5,46.3-43,49.8c-2,0.3-3.9-1.1-4.2-3.2 c-0.3-2.1,1.1-4,3.2-4.2c20.8-2.9,36.6-21.1,36.6-42.2C92.5,26.8,73.4,7.7,50,7.7S7.6,26.8,7.6,50.2c0,21.3,15.8,39.5,36.8,42.3 c2,0.3,3.5,2.2,3.2,4.2c-0.3,2.1-2.2,3.5-4.2,3.2C18.6,96.6,0,75.2,0,50.2')
+  clip-path: path('M0,50.2C0,22.5,22.4,0,50,0s50,22.5,50,50.2c0,24.9-18.5,46.3-43,49.8c-2,0.3-3.9-1.1-4.2-3.2 c-0.3-2.1,1.1-4,3.2-4.2c20.8-2.9,36.6-21.1,36.6-42.2C92.5,26.8,73.4,7.7,50,7.7S7.6,26.8,7.6,50.2c0,21.3,15.8,39.5,36.8,42.3 c2,0.3,3.5,2.2,3.2,4.2c-0.3,2.1-2.2,3.5-4.2,3.2C18.6,96.6,0,75.2,0,50.2');
 }
 
 .complexityNone::before {
