--- a/src/views/ImportBackupPhrase/ImportBackupPhrase.module.css
+++ b/src/views/ImportBackupPhrase/ImportBackupPhrase.module.css
@@ -74,7 +74,7 @@
   composes: pointer from '../../components/useErrorMessage/useErrorTooltip.module.css';
   display: block;
   position: absolute;
-  top: -.25rem;
+  top: -0.25rem;
   left: 50%;
 }
 
