--- a/src/components/Overlay/Overlay.module.css
+++ b/src/components/Overlay/Overlay.module.css
@@ -1,17 +1,17 @@
 .overlay {
   border: 0;
   border-radius: 0.75rem;
-  background:
-    linear-gradient(
-      135deg,
-      #0a1b2f 0%,
-      #304765 40%,
-      #547099 70%,
-      #547099 100%
-    );
+  background: 
+  linear-gradient(
+    135deg,
+    #0a1b2f 0%,
+    #304765 40%,
+    #547099 70%,
+    #547099 100%
+  );
   box-shadow: 0.375rem 0.375rem 0.75rem 0 rgba(0, 0, 0, 0.5);
   position: absolute;
-  top: calc(124rem / 16);
+  top: calc(118rem / 16);
   left: 6.125rem;
   right: 6.125rem;
   padding: 1.5rem;
@@ -19,6 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 0;
 }
 
 .heading {
