--- a/src/components/Overlay/Overlay.module.css
+++ b/src/components/Overlay/Overlay.module.css
@@ -1,8 +1,7 @@
 .overlay {
   border: 0;
   border-radius: 0.75rem;
-  background: 
-  linear-gradient(
+  background: linear-gradient(
     135deg,
     #0a1b2f 0%,
     #304765 40%,
