--- a/src/components/QRCode/QRCode.module.css
+++ b/src/components/QRCode/QRCode.module.css
@@ -1,16 +1,13 @@
-:global .QRCode-cell-empty {
-  fill: var(--color-white);
-}
-
-:global .QRCode-cell-filled {
-  fill: var(--color-pink);
-}
-
 .component {
   position: relative;
   display: inline-block;
   padding: 3%;
   background: var(--color-white);
+}
+
+.code {
+  width: 100%;
+  height: 100%;
 }
 
 .logo {
