--- a/src/components/Overlay/Overlay.module.css
+++ b/src/components/Overlay/Overlay.module.css
@@ -11,14 +11,15 @@
     );
   box-shadow: 0.375rem 0.375rem 0.75rem 0 rgba(0, 0, 0, 0.5);
   position: absolute;
-  top: calc(124rem / 16);
+  top: calc(120rem / 16);
   left: 6.125rem;
   right: 6.125rem;
-  padding: 1.5rem;
+  padding: 1.75rem;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 0;
 }
 
 .heading {
