--- a/src/components/Typography/Typography.module.css
+++ b/src/components/Typography/Typography.module.css
@@ -1,7 +1,7 @@
 .screenHeadline {
   font-family: "Montserrat SemiBold", sans-serif;
   font-size: 1.75rem;
-  color: var(--color-grey-light);
+  color: var(--color-orange);
 }
 
 .importantHeadline {
