--- a/src/views/App/App.css
+++ b/src/views/App/App.css
@@ -4,7 +4,7 @@
 
 :root {
   --color-pink: #8c145a;
-  --color-orange: #ef5a28;
+  --color-orange: #ff6500;
   --color-dark: #4f405c;
   --color-green: #5ab9aa;
   --color-light: #c8e3ee;
