--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -5,11 +5,12 @@
   justify-content: center;
   height: 2.25rem;
   line-height: 2.25rem;
-  border: 1px solid #ffffff;
+  border: 1px solid #fff;
   border-radius: 1.125rem;
   padding: 0 2rem;
   background: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 100%);
-  box-shadow: inset -1px 1px 1px 0 rgba(255, 255, 255, 0.1),
+  box-shadow:
+    inset -1px 1px 1px 0 rgba(255, 255, 255, 0.1),
     0.375rem 0.375rem 0.75rem 0 rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
