SK-169: basic error tooltip component is visible

--- a/src/views/CreatePassword/CreatePassword.module.css
+++ b/src/views/CreatePassword/CreatePassword.module.css
@@ -52,6 +52,10 @@
   padding-right: 2.5rem;
 }
 
+.errorTooltip {
+  composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
+}
+
 .cancel {
   composes: buttonSecondary from '../../components/Button/Button.module.css';
   margin-right: 1rem;
