--- a/src/components/View/View.module.css
+++ b/src/components/View/View.module.css
@@ -10,4 +10,5 @@
     url('../images/background.png') no-repeat center/contain;
   padding: 5rem 1.5rem 0 1.5rem;
   box-sizing: border-box;
+  margin: auto;
 }
