style: remove brake space

--- a/src/views/App/App.module.css
+++ b/src/views/App/App.module.css
@@ -4,8 +4,7 @@ body {
 }
 
 #popup {
-  background:
-  url('../images/background.png') center/contain;
+  background: url('../images/background.png') center/contain;
 }
 
 .container {
