fix: broken image url

--- a/src/views/App/App.module.css
+++ b/src/views/App/App.module.css
@@ -4,7 +4,7 @@ body {
 }
 
 #popup {
-  background: url('../images/background.png') center/contain;
+  background: url('../../components/images/background.png') center/contain;
 }
 
 .container {
