--- a/src/views/SignDApp/SignDApp.module.css
+++ b/src/views/SignDApp/SignDApp.module.css
@@ -23,6 +23,35 @@
   margin: 0.5rem 0 0.5rem;
 }
 
+.addressLine {
+  position: relative;
+  width: 100%;
+  margin: 0.25rem 0 1.5rem 0;
+}
+
+.address {
+  composes: input from '../../components/Input/Input.module.css';
+  font-size: 0.75rem;
+  width: calc(100% - 3.5rem);
+  padding-right: 2.5rem;
+}
+
+.copy {
+  composes: buttonIcon from '../../components/Button/Button.module.css';
+  background-image: url('../../components/images/copy.svg');
+  background-position: center 40%;
+  background-size: auto 50%;
+  width: 2.25rem;
+  height: 2.25rem;
+  position: absolute;
+  right: 0.25rem;
+}
+
+.copied {
+  composes: copy;
+  background-image: url('../../components/images/checkmark-circle.svg');
+}
+
 .details {
   composes: smallText from '../../components/Typography/Typography.module.css';
   font-size: 0.675rem;
