--- a/src/components/usePasteButton/usePasteButton.module.css
+++ b/src/components/usePasteButton/usePasteButton.module.css
@@ -1,11 +1,9 @@
 .paste {
   composes: buttonIcon from '../Button/Button.module.css';
   background-image: url('../images/clipboard.svg');
-  background-size: 1.125rem;
-  width: 2rem;
-  height: 2rem;
-  grid-area: full;
-  align-self: center;
-  justify-self: end;
-  margin-right: 0.5rem;
+  background-size: 50%;
+  width: 2.25rem;
+  height: 2.25rem;
+  position: absolute;
+  right: 0.25rem;
 }
