--- a/src/views/RemoveAccount/RemoveAccount.module.css
+++ b/src/views/RemoveAccount/RemoveAccount.module.css
@@ -12,20 +12,37 @@
 
 .subline {
   composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0;
+  margin: 0 0 0.75rem 0;
   line-height: 1.25rem;
 }
 
+.name {
+  composes: accountText from '../../components/Typography/Typography.module.css';
+  margin: 0.5rem 0 0.25rem 0;
+}
+
 .addressLabel {
-  composes: subline from '../../components/Typography/Typography.module.css';
+  composes: smallText from '../../components/Typography/Typography.module.css';
+  margin: 0.5rem 0;
 }
 
 .address {
-  composes: subline from '../../components/Typography/Typography.module.css';
+  composes: inputText from '../../components/Typography/Typography.module.css';
+  margin: 0;
 }
 
 .explanation {
   composes: subline from '../../components/Typography/Typography.module.css';
+  margin: 1.5rem 0;
+}
+
+.buttonsLine {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  padding-left: 1rem;
 }
 
 .cancel {
@@ -34,4 +51,5 @@
 
 .remove {
   composes: buttonSecondary from '../../components/Button/Button.module.css';
+  padding: 0 1rem;
 }
