--- a/src/components/AccountSlide/AccountSlide.module.css
+++ b/src/components/AccountSlide/AccountSlide.module.css
@@ -9,6 +9,11 @@
   margin-top: 0.375rem;
 }
 
+.centeredName {
+  composes: name;
+  padding-left: 0;
+}
+
 .form {
   display: flex;
   align-items: center;
