Tertiary button design

--- a/src/components/Balance/Balance.module.css
+++ b/src/components/Balance/Balance.module.css
@@ -31,3 +31,8 @@
 .balance {
   margin: 0.25rem 0;
 }
+
+.update {
+  composes: buttonTertiary from '../../components/Button/Button.module.css';
+  margin-top: 0.5rem;
+}
