--- a/src/components/Balance/Balance.module.css
+++ b/src/components/Balance/Balance.module.css
@@ -36,3 +36,7 @@
   composes: buttonTertiary from '../../components/Button/Button.module.css';
   margin-top: 0.5rem;
 }
+
+.errorTooltip {
+  composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
+}
