--- a/src/components/Balance/Balance.module.css
+++ b/src/components/Balance/Balance.module.css
@@ -36,3 +36,9 @@
   composes: buttonTertiary from '../../components/Button/Button.module.css';
   margin-top: 0.5rem;
 }
+
+.update[aria-disabled='true'] {
+  opacity: 0.5;
+  color: var(--color-grey-medium);
+  border: 2px solid rgba(79, 64, 92, 0.5);
+}
