--- a/src/components/chromeMacBug/chromeMacBug.module.css
+++ b/src/components/chromeMacBug/chromeMacBug.module.css
@@ -1,4 +1,4 @@
-@keyframes mac-bug-redraw {
+@keyframes chromeMacBugRedraw {
   0% {
     opacity: 1;
   }
@@ -8,6 +8,6 @@
   }
 }
 
-html.redraw-forever {
-  animation: mac-bug-redraw 1s linear infinite;
+html.redrawForever {
+  animation: chromeMacBugRedraw 1s linear infinite;
 }
