Fixed lint error

--- a/src/views/ExistentialWarning/ExistentialWarning.module.css
+++ b/src/views/ExistentialWarning/ExistentialWarning.module.css
@@ -20,8 +20,7 @@
   color: var(--color-orange);
   margin-top: 1rem;
   padding-top: 7.5rem;
-  background: url('../../components/images/attention-hand.svg') no-repeat top
-    center;
+  background: url('../../components/images/attention-hand.svg') no-repeat top center;
 }
 
 .buttonsLine {
