--- a/src/views/SignDApp/SignDApp.module.css
+++ b/src/views/SignDApp/SignDApp.module.css
@@ -26,7 +26,7 @@
 .addressLine {
   position: relative;
   width: 100%;
-  margin: 0.25rem 0 1.5rem 0;
+  margin: 0.25rem 0 1rem 0;
 }
 
 .address {
@@ -52,9 +52,13 @@
 
 .detailValue {
   width: calc(100% - 6rem);
-  margin: 0.125rem;
+  max-width: calc(100% - 6rem);
+  margin: 0.25rem;
   text-align: left;
   color: var(--color-grey-light);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .passwordLabel {
