--- a/src/views/RemoveAccount/RemoveAccount.module.css
+++ b/src/views/RemoveAccount/RemoveAccount.module.css
@@ -19,6 +19,10 @@
 .name {
   composes: accountText from '../../components/Typography/Typography.module.css';
   margin: 0.5rem 0 0.25rem 0;
+  max-width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .addressLabel {
