--- a/src/views/ShareCredential/ShareCredential.module.css
+++ b/src/views/ShareCredential/ShareCredential.module.css
@@ -23,7 +23,7 @@
 }
 
 .checkbox {
-  composes: сheckbox from '../../components/Checkbox/Checkbox.module.css';
+  composes: checkbox from '../../components/Checkbox/Checkbox.module.css';
 }
 
 .checkbox + * {
