--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -15,7 +15,10 @@
   cursor: pointer;
 }
 
-.buttonPrimary:disabled {
+.buttonPrimary:disabled,
+.buttonPrimary[aria-disabled=true] {
+  opacity: 0.5;
+  color: var(--color-grey-medium);
   border: 1px solid rgba(242, 239, 238, 0.3);
 }
 
@@ -30,6 +33,12 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+}
+
+.buttonSecondary:disabled,
+.buttonSecondary[aria-disabled=true] {
+  opacity: 0.5;
+  color: var(--color-grey-medium);
 }
 
 .buttonIcon {
