--- a/src/views/Welcome/Welcome.module.css
+++ b/src/views/Welcome/Welcome.module.css
@@ -15,13 +15,31 @@
 
 .info {
   composes: subline from '../../components/Typography/Typography.module.css';
-  margin-top: 0.25rem;
+  margin-top: 0.375rem;
   margin-bottom: 0;
+  white-space: pre-line;
+  line-height: 1.25rem;
+}
+
+.termsLine {
+  composes: subline from '../../components/Typography/Typography.module.css';
+  margin-top: 1.25rem;
+}
+
+.agree {
+  composes: checkbox from '../../components/Checkbox/Checkbox.module.css';
+}
+
+.terms {
+  composes: subline from '../../components/Typography/Typography.module.css';
+}
+
+.terms:not(:hover) {
+  text-decoration: none;
 }
 
 .create {
   composes: buttonPrimary from '../../components/Button/Button.module.css';
-  margin-top: 1.25rem;
 }
 
 .import {
