--- a/src/components/Checkbox/Checkbox.module.css
+++ b/src/components/Checkbox/Checkbox.module.css
@@ -14,6 +14,7 @@
   background: var(--color-pink) linear-gradient(140deg, var(--color-pink) 0%, var(--color-dark) 100%);
   box-shadow: inset 0.125em 0.125em 0.125em 0 rgba(0, 0, 0, 0.2);
   position: relative;
+  cursor: pointer;
 }
 
 .checkbox:checked + *::after {
