--- a/src/components/Checkbox/Checkbox.module.css
+++ b/src/components/Checkbox/Checkbox.module.css
@@ -1,8 +1,8 @@
-.сheckbox {
+.checkbox {
   display: none;
 }
 
-.сheckbox + * {
+.checkbox + * {
   --size: 1.25em;
 
   width: var(--size);
@@ -14,9 +14,10 @@
   background: var(--color-pink) linear-gradient(140deg, var(--color-pink) 0%, var(--color-dark) 100%);
   box-shadow: inset 0.125em 0.125em 0.125em 0 rgba(0, 0, 0, 0.2);
   position: relative;
+  cursor: pointer;
 }
 
-.сheckbox:checked + *::after {
+.checkbox:checked + *::after {
   --tick-size: calc(var(--size) * 1.25);
 
   width: var(--tick-size);
