--- a/src/views/ReviewTransaction/ReviewTransaction.module.css
+++ b/src/views/ReviewTransaction/ReviewTransaction.module.css
@@ -53,7 +53,7 @@
 .details {
   composes: smallText from '../../components/Typography/Typography.module.css';
   width: calc(100% + 1.5rem);
-  margin: 0 -0.25rem;
+  margin: 0 -0.25rem 0.25rem;
   text-align: left;
 }
 
@@ -66,49 +66,6 @@
   font-weight: normal;
   padding-left: 0.25rem;
   width: 25%;
-}
-
-.resetLine {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 0.75rem 0;
-}
-
-.reset {
-  composes: smallImportant from '../../components/Typography/Typography.module.css';
-}
-
-.passwordLabel {
-  composes: smallText from '../../components/Typography/Typography.module.css';
-}
-
-.passwordLine {
-  position: relative;
-  margin: 0;
-}
-
-.password {
-  composes: input from '../../components/Input/Input.module.css';
-  width: calc(100% - 3.5rem);
-  padding-right: 2.5rem;
-}
-
-.rememberLabel {
-  composes: smallText from '../../components/Typography/Typography.module.css';
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 0.75rem 0.5rem 0.75rem 0;
-  cursor: pointer;
-}
-
-.errorTooltip {
-  composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
-}
-
-.remember {
-  composes: toggle from '../../components/Toggle/Toggle.module.css';
 }
 
 .buttonsLine {
