no need to set overlay width every time

--- a/src/components/Overlay/Overlay.module.css
+++ b/src/components/Overlay/Overlay.module.css
@@ -15,6 +15,7 @@
   left: 6.125rem;
   right: 6.125rem;
   padding: 1.75rem;
+  max-width: calc(100% - 13rem);
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
